--- a/Simplenote/src/main/res/layout/get_tutorial_button.xml
+++ b/Simplenote/src/main/res/layout/get_tutorial_button.xml
@@ -6,9 +6,8 @@
     android:textAllCaps="false"
     android:background="@drawable/material_showcase_button_bg"
     android:textColor="@color/simplenote_blue_light"
-    android:textSize="22sp"
-    android:shadowColor="#FF0000"
+    android:textSize="24sp"
+    android:shadowColor="#3D3737"
     android:shadowRadius="0"
     >
-    <!--//UNDONE: "Skip" to strings-->
 </Button>
